--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.3.14",
+    "filesaverjs": "^0.2.1",
     "leaflet": "^0.7.7",
     "material-ui": "^0.14.0",
     "react": "^0.14.3",
