--- a/package.json
+++ b/package.json
@@ -23,9 +23,13 @@
     "eslint-plugin-react": "^3.12.0",
     "html-minify-loader": "^1.0.0",
     "html-webpack-plugin": "^1.7.0",
+    "react-redux": "^4.4.0",
+    "react-router": "^2.0.0-rc6",
     "react-transform-catch-errors": "^1.0.0",
     "react-transform-hmr": "^1.0.1",
     "redbox-react": "^1.2.0",
+    "redux": "^3.3.1",
+    "redux-localstorage": "^0.4.0",
     "rimraf": "^2.5.0",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
