--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
   "keywords": [],
   "devDependencies": {
     "babel-core": "^6.3.26",
-    "babel-eslint": "^4.1.6",
+    "babel-eslint": "^6.1.0",
     "babel-loader": "^6.2.0",
     "babel-plugin-react-transform": "^2.0.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
-    "eslint": "^1.10.3",
-    "eslint-plugin-react": "^3.12.0",
+    "eslint": "^2.13.1",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-import": "^1.10.0",
+    "eslint-plugin-jsx-a11y": "^1.5.3",
+    "eslint-plugin-react": "^5.2.2",
     "html-minify-loader": "^1.0.0",
     "html-webpack-plugin": "^1.7.0",
     "react-redux": "^4.4.0",
