--- a/package.json
+++ b/package.json
@@ -12,39 +12,41 @@
   },
   "keywords": [],
   "devDependencies": {
-    "babel-core": "^6.3.26",
+    "babel-core": "^6.10.4",
     "babel-eslint": "^6.1.0",
-    "babel-loader": "^6.2.0",
-    "babel-plugin-react-transform": "^2.0.0",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "babel-preset-stage-0": "^6.3.13",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-react-transform": "^2.0.2",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.5.0",
     "eslint": "^2.13.1",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-plugin-import": "^1.10.0",
     "eslint-plugin-jsx-a11y": "^1.5.3",
     "eslint-plugin-react": "^5.2.2",
-    "html-minify-loader": "^1.0.0",
-    "html-webpack-plugin": "^1.7.0",
-    "react-redux": "^4.4.0",
-    "react-router": "^2.0.0-rc6",
-    "react-transform-catch-errors": "^1.0.0",
-    "react-transform-hmr": "^1.0.1",
-    "redbox-react": "^1.2.0",
-    "redux": "^3.3.1",
-    "redux-localstorage": "^0.4.0",
-    "rimraf": "^2.5.0",
-    "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.0"
+    "html-minify-loader": "^1.1.0",
+    "html-webpack-plugin": "^2.21.0",
+    "react-addons-create-fragment": "~15.1.0",
+    "react-addons-transition-group": "~15.1.0",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.5.2",
+    "react-transform-catch-errors": "^1.0.2",
+    "react-transform-hmr": "^1.0.4",
+    "redbox-react": "^1.2.10",
+    "redux": "^3.5.2",
+    "redux-localstorage": "^0.4.1",
+    "rimraf": "^2.5.2",
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
-    "babel-polyfill": "^6.3.14",
-    "filesaverjs": "^0.2.1",
+    "babel-polyfill": "^6.9.1",
+    "filesaverjs": "^0.2.2",
     "leaflet": "^0.7.7",
-    "material-ui": "^0.14.0",
-    "react": "^0.14.3",
-    "react-dom": "^0.14.3",
-    "react-leaflet": "^0.10.0",
-    "react-tap-event-plugin": "^0.2.1"
+    "material-ui": "^0.15.1",
+    "react": "~15.1.0",
+    "react-dom": "~15.1.0",
+    "react-leaflet": "^0.12.0",
+    "react-tap-event-plugin": "^1.0.0"
   }
 }
