--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "build-dev": "webpack",
-    "build-prod": "NODE_ENV=production webpack",
+    "build:dev": "webpack",
+    "build:prod": "NODE_ENV=production webpack",
     "clean": "rimraf ./build",
+    "deploy": "gh-pages -d build",
+    "predeploy": "GH_PAGES_DEPLOY=true npm run build:prod",
     "lint": "eslint src",
     "start": "webpack-dev-server --hot --inline"
   },
@@ -24,6 +26,7 @@
     "eslint-plugin-import": "^1.10.0",
     "eslint-plugin-jsx-a11y": "^1.5.3",
     "eslint-plugin-react": "^5.2.2",
+    "gh-pages": "^0.11.0",
     "html-minify-loader": "^1.1.0",
     "html-webpack-plugin": "^2.21.0",
     "react-addons-create-fragment": "~15.1.0",
